--- a/interactif-rating-component/main.css
+++ b/interactif-rating-component/main.css
@@ -34,7 +34,7 @@ main{
     display: none;
 }
 .interactive-card{
-    width: 514px;
+    width: 412px;
     height: 442px;
     background: var(--interactive-rating-gradient-black);
     border-radius: 30px;
@@ -52,7 +52,7 @@ main{
 }
 .interactve-card-step-first, .interactive-card-success{
     position: absolute;
-    padding: 40px;
+    padding: 32px 40px 32px 32px;
 
 }
 
@@ -65,6 +65,7 @@ main{
 }
 
 .interactive-card__body{
+    width: 340px;
     margin-top: 30px;
 
 }
@@ -83,7 +84,8 @@ main{
 }
 .interactive-card__rating{
     display: flex;
-    gap: 32px;    
+    /* gap: 32px;     */
+    justify-content: space-between;
     margin-top: 30px;
 }
 .interactive-card__rating__item{
